--- a/reference.bib
+++ b/reference.bib
@@ -1,7 +1,7 @@
 @online{HtmlStandard,
   author = {},
   key = {The Web Hypertext Application Technology Working Group},
-  title = {HTML: A Living Standard},
+  title = {{HTML}: A Living Standard},
   year = 2016,
   url = {https://web.archive.org/web/20160304140644/https://html.spec.whatwg.org/},
   urldate = {2016-03-04}
@@ -15,8 +15,8 @@
   urldate = {2015-09-07}
 }
 
-@article{Brun199781,
-  title = "\{ROOT\} — An object oriented data analysis framework ",
+@article{ROOT,
+  title = "{ROOT} — An object oriented data analysis framework ",
   journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
   volume = "389",
   number = "1–2",
@@ -27,10 +27,10 @@
   doi = "http://dx.doi.org/10.1016/S0168-9002(97)00048-X",
   url = "http://www.sciencedirect.com/science/article/pii/S016890029700048X",
   author = "Rene Brun and Fons Rademakers",
-  abstract = "The \{ROOT\} system in an Object Oriented framework for large scale data analysis. \{ROOT\} written in C++, contains, among others, an efficient hierarchical \{OO\} database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with \{ROOT\} via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The \{OO\} database design has been optimized for parallel access (reading as well as writing) by multiple processes. "
+  abstract = "The {ROOT} system in an Object Oriented framework for large scale data analysis. {ROOT} written in C++, contains, among others, an efficient hierarchical {OO} database, a C++ interpreter, advanced statistical analysis (multi-dimensional histogramming, fitting, minimization, cluster finding algorithms) and visualization tools. The user interacts with {ROOT} via a graphical user interface, the command line or batch scripts. The command and scripting language is C++ (using the interpreter) and large scripts can be compiled and dynamically linked in. The {OO} database design has been optimized for parallel access (reading as well as writing) by multiple processes. "
 }
 
-@inproceedings{nethercote2007valgrind,
+@inproceedings{Valgrind,
   title={Valgrind: a framework for heavyweight dynamic binary instrumentation},
   author={Nethercote, Nicholas and Seward, Julian},
   booktitle={ACM Sigplan notices},
@@ -41,8 +41,8 @@
   organization={ACM}
 }
 
-@article{Vykydal200935,
-  title = "The Medipix2-based network for measurement of spectral characteristics and composition of radiation in \{ATLAS\} detector ",
+@article{MedipixNetwork,
+  title = "The Medipix2-based network for measurement of spectral characteristics and composition of radiation in {ATLAS} detector ",
   journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
   volume = "607",
   number = "1",
@@ -59,10 +59,10 @@
   keywords = "Radiation fields",
   keywords = "Fast neutrons",
   keywords = "Slow neutrons ",
-  abstract = "The \{ATLAS\} detector is now installed at the \{CERN\} \{LHC\} and a precise evaluation of the radiation environment within and around the detector is required to understand the performance of the various detector systems, and to predict their useful lifetime. Furthermore, validation of earlier Monte Carlo predictions about the radiation field in \{ATLAS\} is necessary. In particular, it is important to perform these measurements in the early phases of the \{LHC\} operation. Many other radiation measuring devices lack sensitivity to low doses, and usually do not provide information on the composition of the radiation during this low intensity period. A network of 15 ATLAS-MPX devices has been installed at various positions in the \{ATLAS\} detector. These devices are capable of providing quantitative real-time information on the fluxes and flux distributions of the main radiation types in the experiment, including slow and fast neutrons. The technical description of the ATLAS-MPX detector network as well as the principles of the data analysis is presented. "
+  abstract = "The {ATLAS} detector is now installed at the {CERN} {LHC} and a precise evaluation of the radiation environment within and around the detector is required to understand the performance of the various detector systems, and to predict their useful lifetime. Furthermore, validation of earlier Monte Carlo predictions about the radiation field in {ATLAS} is necessary. In particular, it is important to perform these measurements in the early phases of the {LHC} operation. Many other radiation measuring devices lack sensitivity to low doses, and usually do not provide information on the composition of the radiation during this low intensity period. A network of 15 ATLAS-MPX devices has been installed at various positions in the {ATLAS} detector. These devices are capable of providing quantitative real-time information on the fluxes and flux distributions of the main radiation types in the experiment, including slow and fast neutrons. The technical description of the ATLAS-MPX detector network as well as the principles of the data analysis is presented. "
 }
 
-@MastersThesis{TurecekThesis2011,
+@MastersThesis{Pixelman,
   author = {Daniel Turecek},
   title = {{Software for Radiation Detectors Medipix}},
   school = {Czech Technical University in Prague},
@@ -70,15 +70,35 @@
   year = {2011},
 }
 
+@article{RemoteControl,
+title = "Remote control of ATLAS-MPX Network and Data Visualization ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "633, Supplement 1",
+number = "",
+pages = "S45 - S47",
+year = "2011",
+note = "11th International Workshop on Radiation Imaging Detectors (IWORID) ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2010.06.117",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900210013070",
+author = "D. Turecek and T. Holy and S. Pospisil and Z. Vykydal",
+keywords = "Pixel detectors",
+keywords = "Medipix",
+keywords = "ATLAS",
+keywords = "Remote control system",
+keywords = "Data visualization ",
+abstract = "The ATLAS-MPX Network is a network of 15 Medipix2-based detector devices, installed in various positions in the {ATLAS} detector at CERN, Geneva. The aim of the network is to perform a real-time measurement of the spectral characteristics and the composition of radiation inside the {ATLAS} detector during its operation. The remote control system of ATLAS-MPX controls and configures all the devices from one place, via a web interface, accessible from different operating systems. The Data Visualization application, also with a web interface, has been developed in order to present measured data to the scientific community. It allows to browse through recorded frames from all devices and to search for specific frames by date and time. Charts containing the number of different types of tracks in each frame as a function of time may be rendered from the database. "
+}
+
 @rfc{HTTP1999,
  author = {Fielding, R. and Gettys, J. and Mogul, J. and Frystyk, H. and Masinter, L. and Leach, P. and Berners-Lee, T.},
- title = {Hypertext Transfer Protocol -- HTTP/1.1},
+ title = {Hypertext Transfer Protocol -- {HTTP}/1.1},
  year = {1999},
  publisher = {RFC Editor},
  address = {United States},
 } 
 
-@article{Jakubek2011S262,
+@article{EnergyCalibration,
 title = "Precise energy calibration of pixel detector working in time-over-threshold mode ",
 journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
 volume = "633, Supplement 1",
@@ -93,7 +113,107 @@ author = "Jan Jakubek",
 keywords = "Pixel detectors",
 keywords = "X-ray radiography",
 keywords = "Material recognition ",
-abstract = "The semiconductor pixel detector Timepix (256×256 pixels with pitch of 55 μm) is a successor of the Medipix2 device. Each Timepix pixel can be independently operated in one of three possible modes: (1) counting of the detected particles; (2) measurement of the particle energy; and (3) measurement of the time of interaction. The energy measurement in the second mode is performed via the determination of the “time-over-threshold” (TOT). The energy measurement with the Timepix detector in \{TOT\} mode requires knowledge of the energy calibration of each pixel of the matrix. Such calibration is very nonlinear in the low energy range and can be described by a surrogate function depending on four parameters. The determination of all these parameters can be performed by measurement and evaluation of the response of each pixel in at least four calibration points. The procedure is extremely demanding: it requires the analysis of at least 250 thousand spectra and the performance of 330 thousand least-squares fits. In this article, it is demonstrated that even better result can be achieved with only two or three calibration points halving the number of least-squares fits needed. The method is based on precise analysis of the shape of spectral peaks. The article also discusses the performance of energy calibrated device for spectrometry of heavy charged particles. "
+abstract = "The semiconductor pixel detector Timepix (256×256 pixels with pitch of 55 μm) is a successor of the Medipix2 device. Each Timepix pixel can be independently operated in one of three possible modes: (1) counting of the detected particles; (2) measurement of the particle energy; and (3) measurement of the time of interaction. The energy measurement in the second mode is performed via the determination of the “time-over-threshold” (TOT). The energy measurement with the Timepix detector in {TOT} mode requires knowledge of the energy calibration of each pixel of the matrix. Such calibration is very nonlinear in the low energy range and can be described by a surrogate function depending on four parameters. The determination of all these parameters can be performed by measurement and evaluation of the response of each pixel in at least four calibration points. The procedure is extremely demanding: it requires the analysis of at least 250 thousand spectra and the performance of 330 thousand least-squares fits. In this article, it is demonstrated that even better result can be achieved with only two or three calibration points halving the number of least-squares fits needed. The method is based on precise analysis of the shape of spectral peaks. The article also discusses the performance of energy calibrated device for spectrometry of heavy charged particles. "
 }
 
+@article{Timepix,
+title = "Timepix, a 65k programmable pixel readout chip for arrival time, energy and/or photon counting measurements ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "581",
+number = "1–2",
+pages = "485 - 494",
+year = "2007",
+note = "{VCI} 2007Proceedings of the 11th International Vienna Conference on Instrumentation ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2007.08.079",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900207017020",
+author = "X. Llopart and R. Ballabriga and M. Campbell and L. Tlustos and W. Wong",
+keywords = "Pixel",
+keywords = "Photon counting",
+keywords = "CMOS",
+keywords = "Arrival time",
+keywords = "Medipix",
+keywords = "Micro-pattern gas detectors ",
+abstract = "A novel approach for the readout of a {TPC} at the future linear collider is to use a {CMOS} pixel detector combined with some kind of gas gain grid. A first test using the photon counting chip Medipix2 with {GEM} or Micromegas demonstrated the feasibility of such an approach. Although this experiment demonstrated that single primary electrons could be detected the chip did not provide information on the arrival time of the electron in the sensitive gas volume nor did it give any indication of the quantity of charge detected. The Timepix chip uses an external clock with a frequency of up to 100 {MHz} as a time reference. Each pixel contains a preamplifier, a discriminator with hysteresis and 4-bit {DAC} for threshold adjustment, synchronization logic and a 14-bit counter with overflow control. Moreover, each pixel can be independently configured in one of four different modes: masked mode: pixel is off, counting mode: 1-count for each signal over threshold, {TOT} mode: the counter is incremented continuously as long as the signal is above threshold, and arrival time mode: the counter is incremented continuously from the time the first hit arrives until the end of the shutter. The chip resembles very much the Medipix2 chip physically and can be readout using slightly modified versions of the various existing systems. This paper presents the main features of the new design, electrical measurements and some first images. "
+}
+
+@article{FITPix,
+  author={V Kraus and M Holik and J Jakubek and M Kroupa and P Soukup and Z Vykydal},
+  title={{FITP}ix — fast interface for Timepix pixel detectors},
+  journal={Journal of Instrumentation},
+  volume={6},
+  number={01},
+  pages={C01079},
+  url={http://stacks.iop.org/1748-0221/6/i=01/a=C01079},
+  year={2011},
+  abstract={The semiconductor pixel detector Timepix contains an array of 256 × 256 square pixels with pitch 55 μm. In addition to high spatial granularity the single quantum counting detector Timepix can provide also energy or time information in each pixel. This device is a powerful tool for radiation and particle detection, imaging and tracking. A new readout interface for silicon pixel detectors of the Medipix family has been developed in our group in order to provide a higher frame rate and enhanced flexibility of operation. The interface consists of a field programmable gate array, a USB 2.0 interface chip, DAC, ADC and a circuit which generates bias voltage for the sensor. The main control system is placed in the FPGA circuit which fully controls the Timepix device. This approach offers an easy way how to include new functionality and extended operation. The interface for Timepix supports all operation modes of the detector (counting, TOT, timing). The FITPix is a successor of the USB 1.22 Interface and the electronic readout is built with the latest available components, which allows achieving up to 90 frames per second with a single detector. The frame rate is about 20 times faster compared to the previous system while it maintains all same capabilities supported. In addition FITPix newly enables an adjustable clock frequency and hardware triggering which is a useful tool when there is the need for synchronized operation of multiple devices. Three modes of hardware trigger have been implemented: hardware trigger which starts the measurement, hardware trigger which terminates the measurement and hardware trigger which controls measurement fully. The entire system is fully powered through the USB bus. FITPix supports also readout from several detectors in chain in which case just an external power source is required. FITPix is a fully flexible device and the user needs no other equipment. FITPix combines high performance and mobility and it opens new fields of applications. The current version of the FITPix interface has dimension 45 mm × 60 mm.}
+}
+
+@article{PatternRecognition,
+title = "Pattern recognition of tracks induced by individual quanta of ionizing radiation in Medipix2 silicon detector ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "591",
+number = "1",
+pages = "287 - 290",
+year = "2008",
+note = "Radiation Imaging Detectors 2007Proceedings of the 9th International Workshop on Radiation Imaging Detectors ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2008.03.074",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900208004592",
+author = "T. Holy and E. Heijne and J. Jakubek and S. Pospisil and J. Uher and Z. Vykydal",
+keywords = "Medipix2",
+keywords = "Pattern recognition",
+keywords = "Online tracks analysis",
+keywords = "Dosimetry ",
+abstract = "Medipix2 is a semiconductor pixel detector (256×256 pixels, 55×55 μm2 each) which can count individual quanta of radiation. The detector will respond differently for different types of radiation. If the acquisition time is short enough with respect to radiation intensity, one can see characteristic tracks of individual quanta in an image taken (e.g., curved lines for electrons, round shaped clusters for alpha particles, heavy ions and slow neutrons, cone shapes for fast neutrons, simple dots for low energy X-rays, etc.). For effective visualization of neutrons, the device has to be equipped by corresponding neutron converter, which converts neutrons to heavy charged particles. By analyzing these patterns, in this so-called “tracking mode” of operation, it is possible to distinguish individual tracks and classify them into predefined categories. For each “cluster” detected, the features (such as parameters describing the shape and energy deposition estimation) can be extracted and used to distinguish radiation type. The energy deposited can be estimated by using calibration measurements with different types of radiation and variation of the discrimination threshold. "
+}
+
+@article{MeasuringRadiation,
+title = "Measuring radiation environment in {LHC} or anywhere else, on your computer screen with Medipix ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "699",
+number = "",
+pages = "198 - 204",
+year = "2013",
+note = "Proceedings of the 8th International “Hiroshima” Symposium on the Development and Application of Semiconductor Tracking DetectorsAcademia Sinica, Taipei, Taiwan, December 5 – 8, 2011 ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2012.05.023",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900212005104",
+author = "Erik H.M. Heijne and Rafael Ballabriga Sune and Michael Campbell and Claude Leroy and Xavier Llopart and Jean-Pierre Martin and Stanislav Pospisil and Jaroslav Solc and Paul Soueid and Michal Suk and Lukas Tlustos and Daniel Turecek and Zdenek Vykydal and Winnie Wong",
+keywords = "Quantum dosimetry",
+keywords = "Dose rate",
+keywords = "Pixel detector",
+keywords = "Particle detector",
+keywords = "Background radiation ",
+abstract = "The Medipix family of chips use on-pixel pulse processing front-ends, digitization and counters to produce images of radiation. The devices have been derived from developments for the Large Hadron Collider (LHC) physics experiments at CERN. With the miniaturization of the associated readout system a new method of dosimetry becomes accessible, where single radiation quanta are detected and imaged. Several examples of dose measurements at highly differing dose rates are presented here: monitoring of background radiation on earth, in a flying airplane and in the {ATLAS} experiment at LHC. During proton collision runs as well as during the stops of the accelerator the dose can be measured, including characterization of different types of radiation. Thanks to the noiseless method of quantum imaging dosimetry, a large dynamic range can be achieved, employing only this single device. The dose rate extends from recording only a few quanta in hours, up to hundreds of quanta recorded in a fraction of a ms. With complementary methods for the analysis of the exposed image frames, one can cover 14 orders of magnitude. "
+}
+
+@book{DesignPatterns,
+ author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
+ title = {Design Patterns: Elements of Reusable Object-oriented Software},
+ year = {1995},
+ isbn = {0-201-63361-2},
+ publisher = {Addison-Wesley Longman Publishing Co., Inc.},
+ address = {Boston, MA, USA},
+} 
+
+@article{ProcessingSoftware,
+title = "Data acquisition and processing software package for {M}edipix2 ",
+journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment ",
+volume = "563",
+number = "1",
+pages = "254 - 258",
+year = "2006",
+note = "Proceedings of the 7th International Workshop on Radiation Imaging DetectorsIWORID 20057th International Workshop on Radiation Imaging Detectors ",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2006.01.122",
+url = "http://www.sciencedirect.com/science/article/pii/S0168900206002075",
+author = "T. Holy and J. Jakubek and S. Pospisil and J. Uher and D. Vavrik and Z. Vykydal",
+keywords = "Medipix",
+keywords = "Software",
+keywords = "Radiography",
+keywords = "Tomography",
+keywords = "Beam-hardening ",
+abstract = "The semiconductor pixel detector Medipix2 [1] (256×256 square pixels, 55×55 μm2 each) is a superior imaging device in terms of spatial resolution, linearity and dynamic range. This makes it suitable for various applications such as radiography, neutronography, and micro–tomography. The software package for acquisition and data processing has been developed to control and manage complex measurements. The solution features an open and very flexible modular architecture with custom made plugin support. Plugins can control parts of the acquisition system as well as perform real-time data processing and use these results as feedback for controlling further steps of measurements. This allows us to control, e.g. data acquisition, position and rotation of the sample (stepper motors), source parameters, temperature, etc. in a synchronized way. An example is the adaptive tomography plugin which adaptively controls the measurement and benefits from preprocessing performed by other plugins such as the beam-hardening correction of measured projections. "
+}
 
