--- a/thesis.tex
+++ b/thesis.tex
@@ -198,9 +198,9 @@ unicode=true,
 % Additional feature is live url addresses to sources from your pdf file
 % It requires the file csplainnat.bst (included in this sample zipfile).
 
-\bibliographystyle{csplainnat}
+%\bibliographystyle{csplainnat}
 
-%bibliographystyle{plain}
+\bibliographystyle{acm}
 %\bibliographystyle{psc}
 {
 %JZ: 11.12.2008 Kdo chce mit v techto ukazkovych odkazech take odkaz na CSTeX:
