Final revisions. Added abstracts and stuff.

--- a/k336_thesis_macros.sty
+++ b/k336_thesis_macros.sty
@@ -98,7 +98,7 @@
 Prohlašuji, že jsem předloženou práci vypracoval samostatně a že jsem uvedl veškeré použité informační zdroje v souladu s Metodickým pokynem o dodržování etických principů při přípravě vysokoškolských závěrečných prací.%
 }{%
 \noindent
-I declare that I elaborated this thesis on my own and that I mentioned all the information sources and literature that have been used in accordance with the Guideline for adhering to ethical principles in the course of elaborating an academic final thesis.%
+I declare that the presented work was developed independently and that I have listed all sources of information used within it in accordance with the methodical instructions for observing the ethical principles in the preparation of university theses.%
 }
 \\[15mm]
 #1 \hfill \hbox to 70mm{\tiny\dotfill}
