--- a/nomenclature.tex
+++ b/nomenclature.tex
@@ -3,10 +3,10 @@
 % CERN Abbreviations
 \nomenclature	{CERN}		{European Organization for Nuclear Research (French name: \textit{Conseil Européen pour la Recherche Nucléaire}), based in Geneva, Switzerland.}
 \nomenclature	{ATLAS}		{A Toroidal LHC Apparatus, one of particle detector experiments constructed at LHC.}
-\nomenclature	{LHC}		{Large Hadron Collider, an experimental factility built by CERN.}
-\nomenclature	{LS}		{Long Shutdown, a period in CERN time schedule characteristic by temporary cesation of operation of particle accelerators and increased maintenance.}
-\nomenclature	{ROOT}		{An object oriented data analysis framework. \cite{Brun199781}}
-\nomenclature	{DCS}		{Detector Control Systems, a system providing control of subdetectors and of common infrastructure of the experiment and communication with the services of CERN.}
+\nomenclature	{LHC}		{Large Hadron Collider, an experimental facility built by CERN.}
+\nomenclature	{LS}		{Long Shutdown, a period in CERN time schedule characteristic by temporary cessation of operation of particle accelerators and increased maintenance.}
+\nomenclature	{ROOT}		{An object oriented data analysis framework. \cite{ROOT}}
+\nomenclature	{DCS}		{Detector Control Systems, a system providing control of sub-detectors and of common infrastructure of the experiment and communication with the services of CERN.}
 \nomenclature	{EOS}		{A primary storage system at CERN for LHC experiments.}
 \nomenclature	{IEAP}		{Institute of Experimental and Applied Physics (Czech name: \textit{Ústav technické a experimentální fyziky}), based in Prague, Czech Republic.}
 \nomenclature	{CTU}		{Czech Technical University (Czech name: \textit{České vysoké učení technické}), based in Prague, Czech Republic.}
@@ -14,7 +14,7 @@
 % Timepix Abbreviations
 \nomenclature	{TOA}		{Time of Arrival operation mode. For more information, see section~\ref{tpx:toa}.}
 \nomenclature	{TOT}		{Time of Threshold operation mode. For more information, see section~\ref{tpx:tot}.}
-\nomenclature	{TPX}		{Timepix, a semiconductor pixel detection chip successing Medipix2.}
+\nomenclature	{TPX}		{Timepix, a semiconductor pixel detection chip succeeding Medipix2.}
 \nomenclature	{MPX}		{Medipix, a semiconductor pixel detection chip.}
 \nomenclature	{ASIC}		{Application-specific Integrated Circuit.}
 
@@ -28,7 +28,7 @@
 \nomenclature	{FTP}		{File Transfer Protocol, a network protocol mainly used for providing shared access to files.}
 \nomenclature	{API}		{Application Programming Interface, a set of routines, protocols and tools for building software and applications.}
 \nomenclature	{SQL}		{Structured Query Language, a language designed to define, manage and query data in a relational database system.}
-\nomenclature	{JSTP}		{JSON Timepix Protocol, a protocol used to transmit captured frames to the web visualization UI. For its description, see section \ref{protocol:introduction}.}
+\nomenclature	{JSTP}		{JSON Timepix Protocol, a protocol used to transmit captured frames to the web visualization UI. For its description, see Section \ref{protocol:introduction}.}
 \nomenclature	{RPC}		{Remote Procedure Call, a mechanism used to execute computer subroutines on machines over a network.}
 \nomenclature	{JSON}		{JavaScript Object Notation, a data format derived from JavaScript.}
 \nomenclature	{MIME}		{A two-part file format identifier.}
