--- a/reference.bib
+++ b/reference.bib
@@ -48,7 +48,7 @@
   number = "1",
   pages = "35 - 37",
   year = "2009",
-  note = "Radiation Imaging Detectors 2008Proceedings of the 10th International Workshop on Radiation Imaging Detectors ",
+  note = "Radiation Imaging Detectors 2008, Proceedings of the 10th International Workshop on Radiation Imaging Detectors ",
   issn = "0168-9002",
   doi = "http://dx.doi.org/10.1016/j.nima.2009.03.104",
   url = "http://www.sciencedirect.com/science/article/pii/S0168900209005956",
@@ -123,7 +123,7 @@ volume = "581",
 number = "1–2",
 pages = "485 - 494",
 year = "2007",
-note = "{VCI} 2007Proceedings of the 11th International Vienna Conference on Instrumentation ",
+note = "{VCI} 2007, Proceedings of the 11th International Vienna Conference on Instrumentation ",
 issn = "0168-9002",
 doi = "http://dx.doi.org/10.1016/j.nima.2007.08.079",
 url = "http://www.sciencedirect.com/science/article/pii/S0168900207017020",
@@ -156,7 +156,7 @@ volume = "591",
 number = "1",
 pages = "287 - 290",
 year = "2008",
-note = "Radiation Imaging Detectors 2007Proceedings of the 9th International Workshop on Radiation Imaging Detectors ",
+note = "Radiation Imaging Detectors 2007, Proceedings of the 9th International Workshop on Radiation Imaging Detectors ",
 issn = "0168-9002",
 doi = "http://dx.doi.org/10.1016/j.nima.2008.03.074",
 url = "http://www.sciencedirect.com/science/article/pii/S0168900208004592",
@@ -175,7 +175,7 @@ volume = "699",
 number = "",
 pages = "198 - 204",
 year = "2013",
-note = "Proceedings of the 8th International “Hiroshima” Symposium on the Development and Application of Semiconductor Tracking DetectorsAcademia Sinica, Taipei, Taiwan, December 5 – 8, 2011 ",
+note = "Proceedings of the 8th International “Hiroshima” Symposium on the Development and Application of Semiconductor Tracking Detectors, Academia Sinica, Taipei, Taiwan, December 5 – 8, 2011 ",
 issn = "0168-9002",
 doi = "http://dx.doi.org/10.1016/j.nima.2012.05.023",
 url = "http://www.sciencedirect.com/science/article/pii/S0168900212005104",
@@ -204,7 +204,7 @@ volume = "563",
 number = "1",
 pages = "254 - 258",
 year = "2006",
-note = "Proceedings of the 7th International Workshop on Radiation Imaging DetectorsIWORID 20057th International Workshop on Radiation Imaging Detectors ",
+note = "Proceedings of the 7th International Workshop on Radiation Imaging Detectors IWORID 2005, 7th International Workshop on Radiation Imaging Detectors ",
 issn = "0168-9002",
 doi = "http://dx.doi.org/10.1016/j.nima.2006.01.122",
 url = "http://www.sciencedirect.com/science/article/pii/S0168900206002075",
