--- a/thesis.tex
+++ b/thesis.tex
@@ -149,7 +149,7 @@ unicode=true,
 	\abstractpage
 
 	% Translation of Czech abstract into English.
-	Within the ATLAS experiment at CERN, a network of 15 Timepix pixel detectors has been installed. Since the summer of 2015, these detectors have been producing measurements periodically, generating voluminous amounts of research data. The subject of this thesis is the definition and implementation of a software system to archive, process and visualize such information within a web browser. The resulting system is comprised of two fundamental components: a data server and a visualization website. The data server ensures efficient data access by optimizing file storage structures, utilizing indexing methods, and defining a proprietary transfer protocol. Apart from plotting charts and calculating statistics from multiple detectors in the network, the visualization website allows its users to interact with the displayed content by applying magnification, setting arbitrary predicates, and integrating over consecutive frames. The produced software has various applications in data analysis and visualization, and can be used in other experiments involving Timepix detectors.
+	A network of 15 Timepix pixel detectors was installed within the ATLAS experiment at CERN. These detectors are in operation continuously from June 2015, producing huge amounts of research data. The subject of this thesis is the definition and implementation of a software system to archive, process and visualize such information within a web application. The presented system is comprised of two fundamental components: a data server and a visualization website. The data server ensures efficient data access by optimizing file storage structures, utilizing indexing methods, and defining a proprietary transfer protocol. Apart from plotting charts and calculating statistics from multiple detectors in the network, the web visualization allows its users to interact with the displayed content by applying magnification, setting arbitrary predicates, and integrating over consecutive frames. The produced software has various applications in data analysis and visualization, and can be used in other experiments involving Timepix detectors.
 
 	% Prace v cestine musi krome abstraktu v anglictine obsahovat i
 	% abstrakt v cestine.
@@ -159,7 +159,7 @@ unicode=true,
 	\vskip 2.75\baselineskip
 
 	\noindent
-	V experimentu ATLAS v CERN byla nainstalována síť 15 pixelových detektorů typu Timepix. Od léta 2015 tyto detektory pravidelně zaznamenávaly snímky, čímž vytvořily velké množství výzkumných dat. Předmětem této práce je definice a implementace softwarového systému pro archivaci, zpracování a vizualizaci těchto dat ve webovém prohlížeči. Navržený systém se skládá ze dvou komponent: z datového serveru a webové stránky s vizualizací. Datový server zajišťuje efektivní přístup k datům prostřednictvím optimalizace struktur souborového systému, aplikace indexovacích metod a definice dedikovaného přenosového protokolu. Webová stránka s vizualizací umožňuje vykreslování grafů a počítání statistik pro více detektorů najednou. Kromě toho však také umožňuje uživatelům interaktivní zacházení s daty, např. přiblížení, nastavování libovolných predikátů a integrování přes větší počet snímků v řadě. Vyvinutý software má aplikace v analýze a vizualizaci dat a může být použit v dalších experimentech, které využívají detektory typu Timepix.
+	V experimentu ATLAS v CERN byla nainstalována síť 15 pixelových detektorů typu Timepix. Tyto detektory jsou v provozu nepřetržitě od června 2015, čímž vytvořily velké množství výzkumných dat. Předmětem této práce je definice a implementace softwarového systému pro archivaci, zpracování a vizualizaci těchto dat prostřednictím webu. Navržený systém se skládá ze dvou komponent: z datového serveru a webové stránky s vizualizací. Datový server zajišťuje efektivní přístup k datům prostřednictvím optimalizace struktur souborového systému, aplikace indexovacích metod a definice dedikovaného přenosového protokolu. Webová vizualizace umožňuje vykreslování grafů a počítání statistik pro více detektorů najednou. Kromě toho však také umožňuje uživatelům interaktivní zacházení s daty, například přiblížení, nastavování libovolných predikátů a integrování přes větší počet snímků v řadě. Vyvinutý software má mnoho aplikací v analýze a vizualizaci dat, a může být použit v dalších experimentech, které využívají detektory typu Timepix.
 
 	% Abstrakt práce by měl velmi stručně vystihovat její obsah. Tedy čím se práce zabývá a co je jejím výsledkem/přínosem.
 
