--- a/k336_thesis_macros.sty
+++ b/k336_thesis_macros.sty
@@ -47,7 +47,7 @@
 \bigskip
 {\labelStudBranch: \StudBranch}\\
 \bigskip
-\today
+May 15, 2016
 \end{center}
 \newpage
 }
@@ -169,7 +169,7 @@ I declare that the presented work was developed independently and that I have li
 		 \typeout{Title: \WorkTitle}
 		 \typeout{Supervisor: \Supervisor}
 		 \typeout{***************************************************}
-		 \newcommand\Department{Department of Computer Science and Engineering}
+		 \newcommand\Department{Department of Cybernetics}
 		 \newcommand\Faculty{Faculty of Electrical Engineering}
 		 \newcommand\University{Czech Technical University in Prague}
 		 \newcommand\labelSupervisor{Supervisor}
